# sandshroud

./: alot of fixes.txt
Branch/Hellbound/src/hearthstone-realmserver/: CharacterHandler.cpp  ClientManager.cpp  ClientManager.h  ClientSocket.cpp  ClientSocket.h  ClusterManager.cpp  ClusterManager.h  LogonCommClient.cpp  LogonCommClient.h  LogonCommHandler.cpp  LogonCommHandler.h  Main.cpp  Makefile.am  Master.cpp  Master.h  MasterServer.cpp  MasterServer.h  MasterServerSocket.cpp  MasterServerSocket.h  ObjectStorage.cpp  ObjectStorage.h  Player.h  QueryHandler.cpp  RStdAfx.cpp  RStdAfx.h  Session.cpp  Session.h  Structures.h  WorkerServerSocket.h  WorldSocket.h
Branch/Hydraxis/src/FeatherMoonEmu-logonserver/: AccountCache.cpp  AccountCache.h  AuthSocket.cpp  AuthSocket.h  AuthStructs.h  AutoPatcher.cpp  AutoPatcher.h  LogonCommServer.cpp  LogonCommServer.h  LogonConsole.cpp  LogonConsole.h  LogonOpcodes.cpp  LogonOpcodes.h  LogonStdAfx.cpp  LogonStdAfx.h  Main.cpp  Main.h  Makefile.am  PeriodicFunctionCall_Thread.h
Branch/Hydraxis/src/FeatherMoonEmu-realmserver/: CharacterHandler.cpp  ClientManager.cpp  ClientManager.h  ClusterManager.cpp  ClusterManager.h  LogonCommClient.cpp  LogonCommClient.h  LogonCommHandler.cpp  LogonCommHandler.h  Makefile.am  Master.cpp  Master.h  ObjectStorage.cpp  ObjectStorage.h  QueryHandler.cpp  RStdAfx.cpp  RStdAfx.h  Session.cpp  Session.h  Structures.h  WorkerOpcodes.h  WorkerServer.cpp  WorkerServer.h  WorkerServerSocket.cpp  WorkerServerSocket.h  WorldSocket.cpp  WorldSocket.h
Trunk/extras/DBCExtractor/: CMakeLists.txt  VC100_ad.vcxproj  VC90_ad.vcproj
Trunk/extras/DBCExtractor/src/: dbcfile.cpp  mpq_libmpq.cpp
Trunk/extras/DBCExtractor/src/libmpq/: common.cpp  common.h  explode.cpp  explode.h  extract.cpp  huffman.cpp  mpq.h  parser.cpp  wave.cpp  zconf.h
Trunk/extras/DBCExtractor/src/loadlib/: CMakeLists.txt  adt.h
Trunk/src/hearthstone-shared/: AuthCodes.h  BufferPool.cpp  BufferPool.h  ByteBuffer.h  ByteConverter.h  CallBack.cpp  CallBack.h  CircularQueue.h  Common.h  CoreMemoryAllocator.cpp  CoreMemoryAllocator_Core.cpp  CrashHandler.cpp  CrashHandler.h  Errors.h  FastQueue.h  LocationVector.h  Log.cpp  Log.h  Makefile.am  MemoryLeaks.cpp  MemoryLeaks.h  MersenneTwister.cpp  MersenneTwister.h  NGLog.h  New-Bytebuffer.h  PacketLog.cpp  PerfCounters.h  PreallocatedQueue.h  SharedStdAfx.cpp  SharedStdAfx.h  Singleton.h  SmartPointer.h  StackBuffer.h  StackWalker.cpp  StackWalker.h  Storage.h  Timer.h  Util.cpp  Util.h  WoWGuid.h  (+11 more)
Trunk/src/hearthstone-shared/Auth/: BigNumber.cpp  BigNumber.h  HMAC.cpp  HMAC.h  MD5.cpp  MD5.h  Sha1.cpp  Sha1.h  WowCrypt.cpp  WowCrypt.h
Trunk/src/hearthstone-shared/Collision/: Interface.cpp  LocationVector.h
Trunk/src/hearthstone-shared/Collision/g3dlite/: AABox.cpp  AABox.h  Any.cpp  Any.h  Array.h  AtomicInt32.h  BinaryFormat.cpp  BinaryFormat.h  BinaryInput.cpp  BinaryInput.h  BinaryOutput.cpp  BinaryOutput.h  BoundsTrait.h  Box.cpp  Box.h  Capsule.cpp  Capsule.h  CollisionDetection.cpp  CollisionDetection.h  Color1.cpp  Color1.h  Color1uint8.cpp  Color1uint8.h  Color3.cpp  Color3.h  Color3uint8.cpp  Color3uint8.h  Color4.cpp  Color4.h  Color4uint8.cpp  Color4uint8.h  CoordinateFrame.cpp  CoordinateFrame.h  Crypto.cpp  Crypto.h  Cylinder.cpp  Cylinder.h  EqualsTrait.h  G3D.h  G3DAll.h  (+82 more)
Trunk/src/hearthstone-shared/Collision/vmap/: AABSPTree.h  BIH.cpp  BIH.h  BaseModel.cpp  BaseModel.h  CoordModelMapping.cpp  CoordModelMapping.h  IVMapManager.h  ManagedModelContainer.cpp  ManagedModelContainer.h  MapTree.cpp  MapTree.h  ModelContainer.cpp  ModelContainer.h  ModelInstance.cpp  ModelInstance.h  NodeValueAccess.h  RayIntersectionIterator.h  ShortBox.h  ShortVector.h  TileAssembler.cpp  TileAssembler.h  TreeNode.h  VMapDefinitions.h  VMapFactory.cpp  VMapFactory.h  VMapManager.cpp  VMapManager.h  VMapManager2.cpp  VMapManager2.h  VMapTools.h  WorldModel.cpp  WorldModel.h
Trunk/src/hearthstone-shared/Config/: Config.cpp  Config.h  ConfigEnv.h
Trunk/src/hearthstone-shared/Console/: BaseConsole.h  CConsole.cpp  CConsole.h  ConsoleListener.cpp
Trunk/src/hearthstone-shared/DataStorage/: Database.cpp  Database.h  DatabaseEnv.h
Trunk/src/hearthstone-shared/DataStorage/DBC/: DBC.cpp  DBC.h  DBCStores.cpp  DBCStores.h  DataStore.h  dbcfile.cpp
Trunk/src/hearthstone-shared/Database/: DBC.cpp  DBC.h  DBCStores.cpp  DBCStores.h  DataStore.h  Database.cpp  Database.h  DatabaseEnv.h  Field.h  MySQLDatabase.cpp  MySQLDatabase.h  dbcfile.cpp  dbcfile.h
Trunk/src/hearthstone-shared/Network/: BaseBuffer.h  CircularBuffer.cpp  CircularBuffer.h  ListenSocket.h  ListenSocketFreeBSD.h  ListenSocketLinux.h  ListenSocketPoll.h  ListenSocketSelect.h  ListenSocketWin32.h  Network.h  Socket.cpp  Socket.h  SocketDefines.h  SocketEngine_iocp.cpp  SocketEngine_iocp.h  SocketEngine_select.cpp  SocketFreeBSD.cpp  SocketLinux.cpp  SocketMgrFreeBSD.cpp  SocketMgrFreeBSD.h  SocketMgrLinux.cpp  SocketMgrLinux.h  SocketMgrPoll.cpp  SocketMgrPoll.h  SocketMgrSelect.cpp  SocketMgrSelect.h  SocketMgrWin32.cpp  SocketMgrWin32.h  SocketOps.h  SocketOpsFreeBSD.cpp  SocketOpsLinux.cpp  SocketOpsPoll.cpp  SocketOpsSelect.cpp  SocketOpsWin32.cpp  SocketPoll.cpp  SocketSelect.cpp  SocketWin32.cpp  TcpSocket.cpp  TcpSocket.h
Trunk/src/hearthstone-shared/Network-New/: BaseBuffer.h  BaseSocket.h  CircularBuffer.h  ListenSocket.h  Network.h  SocketEngine.cpp  SocketEngine.h  SocketEngine_epoll.cpp  SocketEngine_epoll.h  SocketEngine_iocp.cpp  SocketEngine_iocp.h  SocketEngine_kqueue.cpp  SocketEngine_kqueue.h  SocketEngine_poll.cpp  SocketEngine_poll.h  SocketEngine_select.cpp  SocketEngine_select.h  StraightBuffer.h  TcpSocket.cpp  TcpSocket.h
Trunk/src/hearthstone-shared/Pathfinding/: ChunkyTriMesh.cpp  ChunkyTriMesh.h  InputGeom.cpp  InputGeom.h  MeshLoaderObj.cpp  MeshLoaderObj.h
Trunk/src/hearthstone-shared/Pathfinding/Detour/: DetourAlloc.cpp  (+13 more)
Trunk/src/hearthstone-shared/Threading/: Condition.h  Guard.h  LockedQueue.h  Mutex.cpp  Mutex.h  Queue.h  RWLock.h  ThreadPool.cpp  ThreadPool.h  ThreadStarter.h  Threading.h
(+3975 files in other folders)
