INCLUDES += -I$(srcdir)

noinst_LIBRARIES = libshared.a

libshared_a_SOURCES = \
    Log.cpp \
    MemoryLeaks.cpp \
    MersenneTwister.cpp \
    MersenneTwister.h \
    PreallocatedQueue.h \
    ByteBuffer.h \
    BufferPool.h \
    BufferPool.cpp \
    Common.h \
    Errors.h \
    Log.h \
    MemoryLeaks.h \
    Singleton.h \
    Threading.h \
    Timer.h \
    UnixThreading.h \
    Util.h \
    Util.cpp \
    WinThreading.h \
    WorldPacket.h \
    crc32.cpp \
    crc32.h \
    hashmap.cpp \
    hashmap.h \
    FastQueue.h \
    Threading/Mutex.cpp \
    Threading/ThreadPool.cpp \
    Storage.h \
    hearthstone_getopt.h \
    hearthstone_getopt.cpp \
    CrashHandler.h \
    CrashHandler.cpp \
    Auth/BigNumber.cpp \
    Auth/BigNumber.h \
    Auth/HMAC.cpp \
    Auth/HMAC.h \
    Auth/MD5.cpp \
    Auth/MD5.h \
    Auth/Sha1.cpp \
    Auth/Sha1.h \
    Auth/WowCrypt.cpp \
    Auth/WowCrypt.h \
    Config/Config.cpp \
    Config/Config.h \
    Config/ConfigEnv.h \
    Database/DBC.cpp \
    Database/Database.cpp \
    Database/DBC.h \
    Database/Database.h \
    Database/DBCStores.cpp \
    Database/DatabaseEnv.h \
    Database/DBCStores.h \
    Database/Field.h \
    Database/DataStore.h \
    Database/dbcfile.cpp \
    Database/dbcfile.h \
    Network/CircularBuffer.h \
    Network/CircularBuffer.cpp \
    Network/ListenSocketPoll.h \
    Network/ListenSocketSelect.h \
    Network/ListenSocketLinux.h \
    Network/ListenSocketFreeBSD.h \
    Network/Network.h \
    Network/Socket.cpp \
    Network/Socket.h \
    Network/SocketDefines.h \
    Network/SocketLinux.cpp \
    Network/SocketFreeBSD.cpp \
    Network/SocketMgrLinux.cpp \
    Network/SocketMgrLinux.h \
    Network/SocketMgrFreeBSD.cpp \
    Network/SocketMgrFreeBSD.h \
    Network/SocketOps.h \
    Network/SocketOpsLinux.cpp \
    Network/SocketOpsFreeBSD.cpp \
    Network/SocketMgrSelect.h \
    Network/SocketMgrSelect.cpp \
    Network/SocketOpsSelect.cpp \
    Network/SocketSelect.cpp \
    Network/SocketMgrPoll.h \
    Network/SocketMgrPoll.cpp \
    Network/SocketOpsPoll.cpp \
    Network/SocketPoll.cpp \
    Collision/vmap/BIH.h \
    Collision/vmap/BIH.cpp \
    Collision/vmap/IVMapManager.h \
    Collision/vmap/MapTree.cpp \
    Collision/vmap/MapTree.h \
    Collision/vmap/ModelInstance.cpp \
    Collision/vmap/ModelInstance.h \
    Collision/vmap/TileAssembler.cpp \
    Collision/vmap/TileAssembler.h \
    Collision/vmap/VMapDefinitions.h \
    Collision/vmap/VMapFactory.cpp \
    Collision/vmap/VMapFactory.h \
    Collision/vmap/VMapManager2.cpp \
    Collision/vmap/VMapManager2.h \
    Collision/vmap/VMapTools.h \
    Collision/vmap/WorldModel.cpp \
    Collision/vmap/WorldModel.h \
    Collision/g3dlite/AABox.cpp \
    Collision/g3dlite/AABox.h \
    Collision/g3dlite/Any.cpp \
    Collision/g3dlite/Any.h \
    Collision/g3dlite/Array.h \
    Collision/g3dlite/Box.cpp \
    Collision/g3dlite/AtomicInt32.h \
    Collision/g3dlite/BinaryFormat.cpp \
    Collision/g3dlite/BinaryFormat.h \
    Collision/g3dlite/BinaryInput.cpp \
    Collision/g3dlite/BinaryInput.h \
    Collision/g3dlite/BinaryOutput.cpp \
    Collision/g3dlite/BinaryOutput.h \
    Collision/g3dlite/BoundsTrait.h \
    Collision/g3dlite/Box.cpp \
    Collision/g3dlite/Box.h \
    Collision/g3dlite/Capsule.cpp \
    Collision/g3dlite/Capsule.h \
    Collision/g3dlite/CollisionDetection.cpp \
    Collision/g3dlite/CollisionDetection.h \
    Collision/g3dlite/Color1.cpp \
    Collision/g3dlite/Color1.h \
    Collision/g3dlite/Color1uint8.cpp \
    Collision/g3dlite/Color1uint8.h \
    Collision/g3dlite/Color3.cpp \
    Collision/g3dlite/Color3.h \
    Collision/g3dlite/Color3uint8.cpp \
    Collision/g3dlite/Color3uint8.h \
    Collision/g3dlite/Color4.cpp \
    Collision/g3dlite/Color4.h \
    Collision/g3dlite/Color4uint8.cpp \
    Collision/g3dlite/Color4uint8.h \
    Collision/g3dlite/CoordinateFrame.cpp \
    Collision/g3dlite/CoordinateFrame.h \
    Collision/g3dlite/Crypto.cpp \
    Collision/g3dlite/Crypto.h \
    Collision/g3dlite/Cylinder.cpp \
    Collision/g3dlite/Cylinder.h \
    Collision/g3dlite/debug.h \
    Collision/g3dlite/debugAssert.cpp \
    Collision/g3dlite/debugAssert.h \
    Collision/g3dlite/debugAssert2.h \
    Collision/g3dlite/debugPrintf.h \
    Collision/g3dlite/EqualsTrait.h \
    Collision/g3dlite/fileutils.cpp \
    Collision/g3dlite/fileutils.h \
    Collision/g3dlite/format.cpp \
    Collision/g3dlite/format.h \
    Collision/g3dlite/G3D.h \
    Collision/g3dlite/G3DAll.h \
    Collision/g3dlite/g3dfnmatch.cpp \
    Collision/g3dlite/g3dfnmatch.h \
    Collision/g3dlite/G3DGameUnits.h \
    Collision/g3dlite/g3dmath.cpp \
    Collision/g3dlite/g3dmath.h \
    Collision/g3dlite/GCamera.h \
    Collision/g3dlite/GMutex.h \
    Collision/g3dlite/HashTrait.h \
    Collision/g3dlite/Line.cpp \
    Collision/g3dlite/Line.h \
    Collision/g3dlite/LineSegment.cpp \
    Collision/g3dlite/LineSegment.h \
    Collision/g3dlite/Matrix.cpp \
    Collision/g3dlite/Matrix.h \
    Collision/g3dlite/Matrix2.h \
    Collision/g3dlite/Matrix3.cpp \
    Collision/g3dlite/Matrix3.h \
    Collision/g3dlite/Matrix4.cpp \
    Collision/g3dlite/Matrix4.h \
    Collision/g3dlite/MemoryManager.cpp \
    Collision/g3dlite/MemoryManager.h \
    Collision/g3dlite/ParseError.h \
    Collision/g3dlite/Plane.cpp \
    Collision/g3dlite/Plane.h \
    Collision/g3dlite/platform.h \
    Collision/g3dlite/PositionTrait.h \
    Collision/g3dlite/prompt.cpp \
    Collision/g3dlite/prompt.h \
    Collision/g3dlite/Quat.cpp \
    Collision/g3dlite/Random.cpp \
    Collision/g3dlite/Random.h \
    Collision/g3dlite/Ray.cpp \
    Collision/g3dlite/Ray.h \
    Collision/g3dlite/Rect2D.cpp \
    Collision/g3dlite/Rect2D.h \
    Collision/g3dlite/ReferenceCount.cpp \
    Collision/g3dlite/ReferenceCount.h \
    Collision/g3dlite/RegistryUtil.cpp \
    Collision/g3dlite/RegistryUtil.h \
    Collision/g3dlite/Set.h \
    Collision/g3dlite/Sphere.cpp \
    Collision/g3dlite/Sphere.h \
    Collision/g3dlite/Spline.h \
    Collision/g3dlite/stringutils.cpp \
    Collision/g3dlite/stringutils.h \
    Collision/g3dlite/System.cpp \
    Collision/g3dlite/System.h \
    Collision/g3dlite/Table.h \
    Collision/g3dlite/TextInput.cpp \
    Collision/g3dlite/TextInput.h \
    Collision/g3dlite/TextOutput.cpp \
    Collision/g3dlite/TextOutput.h \
    Collision/g3dlite/Triangle.cpp \
    Collision/g3dlite/Triangle.h \
    Collision/g3dlite/uint128.cpp \
    Collision/g3dlite/uint128.h \
    Collision/g3dlite/units.h \
    Collision/g3dlite/UprightFrame.cpp \
    Collision/g3dlite/UprightFrame.h \
    Collision/g3dlite/Vector2.cpp \
    Collision/g3dlite/Vector2.h \
    Collision/g3dlite/Vector2int16.cpp \
    Collision/g3dlite/Vector2int16.h \
    Collision/g3dlite/Vector3.cpp \
    Collision/g3dlite/Vector3.h \
    Collision/g3dlite/Vector3int16.cpp \
    Collision/g3dlite/Vector3int16.h \
    Collision/g3dlite/Vector3int32.cpp \
    Collision/g3dlite/Vector3int32.h \
    Collision/g3dlite/Vector4.cpp \
    Collision/g3dlite/Vector4.h \
    Collision/g3dlite/Vector4int8.cpp \
    Collision/g3dlite/Vector4int8.h \
    Collision/g3dlite/vectorMath.h \
    Pathfinding/ChunkyTriMesh.h \
    Pathfinding/ChunkyTriMesh.cpp \
    Pathfinding/InputGeom.h \
    Pathfinding/InputGeom.cpp \
    Pathfinding/MeshLoaderObj.h \
    Pathfinding/MeshLoaderObj.cpp \
    Pathfinding/Recast/RecastArea.cpp \
    Pathfinding/Recast/RecastContour.cpp \
    Pathfinding/Recast/Recast.cpp \
    Pathfinding/Recast/RecastFilter.cpp \
    Pathfinding/Recast/Recast.h \
    Pathfinding/Recast/RecastLog.cpp \
    Pathfinding/Recast/RecastLog.h \
    Pathfinding/Recast/RecastMesh.cpp \
    Pathfinding/Recast/RecastMeshDetail.cpp \
    Pathfinding/Recast/RecastRasterization.cpp \
    Pathfinding/Recast/RecastRegion.cpp \
    Pathfinding/Recast/RecastTimer.cpp \
    Pathfinding/Recast/RecastTimer.h \
    Pathfinding/Detour/DetourCommon.cpp \
    Pathfinding/Detour/DetourCommon.h \
    Pathfinding/Detour/DetourNavMeshBuilder.cpp \
    Pathfinding/Detour/DetourNavMeshBuilder.h \
    Pathfinding/Detour/DetourNavMesh.cpp \
    Pathfinding/Detour/DetourNavMesh.h \
    Pathfinding/Detour/DetourNode.cpp \
    Pathfinding/Detour/DetourNode.h 
