INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../hearthstone-shared
INCLUDES += -I$(srcdir)/../../../hearthstone-world -I$(srcdir)/../../../../dep/src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libGMScripting.la

libGMScripting_la_SOURCES = \
gm/gmArrayLib.cpp \
gm/gmArrayLib.h \
gm/gmArraySimple.cpp \
gm/gmArraySimple.h \
gm/gmByteCode.cpp \
gm/gmByteCode.h \
gm/gmByteCodeGen.cpp \
gm/gmByteCodeGen.h \
gm/gmCall.cpp \
gm/gmCall.h \
gm/gmCodeGen.cpp \
gm/gmCodeGen.h \
gm/gmCodeGenHooks.cpp \
gm/gmCodeGenHooks.h \
gm/gmCodeTree.cpp \
gm/gmCodeTree.h \
gm/gmConfig.h \
gm/gmConfig_p.h \
gm/gmCrc.cpp \
gm/gmCrc.h \
gm/gmDebug.cpp \
gm/gmDebug.h \
gm/gmDebugger.cpp \
gm/gmDebugger.h \
gm/gmFunctionObject.cpp \
gm/gmFunctionObject.h \
gm/gmGCRoot.cpp \
gm/gmGCRoot.h \
gm/gmGCRootUtil.cpp \
gm/gmGCRootUtil.h \
gm/gmHash.cpp \
gm/gmHash.h \
gm/gmHelpers.cpp \
gm/gmHelpers.h \
gm/gmIncGC.cpp \
gm/gmIncGC.h \
gm/gmIterator.h \
gm/gmLibHooks.cpp \
gm/gmLibHooks.h \
gm/gmListDouble.cpp \
gm/gmListDouble.h \
gm/gmLog.cpp \
gm/gmLog.h \
gm/gmMachine.cpp \
gm/gmMachine.h \
gm/gmMachineLib.cpp \
gm/gmMachineLib.h \
gm/gmMathLib.cpp \
gm/gmMathLib.h \
gm/gmMem.cpp \
gm/gmMem.h \
gm/gmMemChain.cpp \
gm/gmMemChain.h \
gm/gmMemFixed.cpp \
gm/gmMemFixed.h \
gm/gmMemFixedSet.cpp \
gm/gmMemFixedSet.h \
gm/gmOperators.cpp \
gm/gmOperators.h \
gm/gmParser.cpp \
gm/gmParser.cpp.h \
gm/gmScanner.cpp \
gm/gmScanner.h \
gm/gmStream.cpp \
gm/gmStream.h \
gm/gmStreamBuffer.cpp \
gm/gmStreamBuffer.h \
gm/gmStringLib.cpp \
gm/gmStringLib.h \
gm/gmStringObject.cpp \
gm/gmStringObject.h \
gm/gmSystemLib.cpp \
gm/gmSystemLib.h \
gm/gmTableObject.cpp \
gm/gmTableObject.h \
gm/gmThread.cpp \
gm/gmThread.h \
gm/gmUserObject.cpp \
gm/gmUserObject.h \
gm/gmUtil.cpp \
gm/gmUtil.h \
gm/gmVariable.cpp \
gm/gmVariable.h \
gm/gmVector3Lib.cpp \
gm/gmVector3Lib.h \
GMEngine.cpp \
GMEngine.h \
ScriptFunctions.cpp \
ScriptFunctions.h \
ScriptFunctionTable.cpp
