INCLUDES = -I$(top_srcdir)/src/hearthstone-logonserver \
   -I$(top_srcdir)/src/hearthstone-realmserver -I$(top_srcdir)/src/hearthstone-shared -I$(top_srcdir)/src/hearthstone-voicechat \
   -I$(top_srcdir)/src/hearthstone-world -I$(srcdir) -I$(srcdir)/../../../../dep/include \
   -I$(srcdir)/../../../../dep/src -I$(srcdir)/../../../../src
INCLUDES += -I$(srcdir)/../../../hearthstone-shared/g3dlite -I$(srcdir)/../../../hearthstone-shared/vmap \
            -I../Common/

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libSunInstanceScripts.la

libSunInstanceScripts_la_SOURCES = Arcatraz/Instance_Arcatraz.cpp \
AuchenaiCrypt/Instance_AuchenaiCrypts.cpp \
AzjolNerub/Instance_AzjolNerub.cpp \
BlackMorass/Instance_BlackMorass.cpp \
BlackrockDepths/Instance_BlackrockDepths.cpp \
BlackrockSpire/Instance_BlackrockSpire.cpp \
BloodFurnace/Instance_BloodFurnace.cpp \
Botanica/Instance_Botanica.cpp \
CullingOfStratholme/Instance_CullingOfStratholme.cpp \
Deadmine/Instance_Deadmines.cpp \
DireMaul/Instance_DireMaul.cpp \
DrakTharonKeep/Instance_DrakTharonKeep.cpp \
HallsOfLightnin/Instance_HallsOfLightning.cpp \
HellfireRamparts/Instance_HellfireRamparts.cpp \
MagistersTerrace/Instance_MagistersTerrace.cpp \
ManaTombs/Instance_ManaTombs.cpp \
Mauradon/Instance_Mauradon.cpp \
Nexus/Instance_Nexus.cpp \
OldHillsbradFoothills/Instance_OldHillsbradFoothills.cpp \
HallsOfStone/Instance_HallsOfStone.cpp \
RagefireChasm/Instance_RagefireChasm.cpp \
RazorfenDowns/Instance_RazorfenDowns.cpp \
ScarletMonastery/Instance_ScarletMonastery.cpp \
Scholomance/Instance_Scholomance.cpp \
SethekkHalls/Instance_SethekkHalls.cpp \
ShadowLabyrinth/Instance_ShadowLabyrinth.cpp \
ShadowfangKeep/Instance_ShadowfangKeep.cpp \
TheMechanar/Instance_TheMechanar.cpp \
TheShatteredHalls/Instance_TheShatteredHalls.cpp \
TheSlavePens/Instance_TheSlavePens.cpp \
TheSteamvault/Instance_TheSteamvault.cpp \
TheUnderbog/Instance_TheUnderbog.cpp \
Uldaman/Instance_Uldaman.cpp \
UtgardeKee/Instance_UtgardeKeep.cpp \
WailingCaverns/Instance_WailingCaverns.cpp \
TheStockade/Instance_TheStockade.cpp \
ZulFarrak/Instance_ZulFarrak.cpp \
BlackTemple/Raid_BlackTemple.cpp \
BlackwingLair/Raid_BlackwingLair.cpp \
HyjalSummit/Raid_HyjalSummit.cpp \
GruulsLair/Raid_GruulsLair.cpp \
Karazhan/Raid_Karazhan.cpp \
MoltenCore/Raid_MoltenCore.cpp \
Naxxramas/Raid_Naxxramas.cpp \
OnyxiasLair/Raid_OnyxiasLair.cpp \
SerpentshrineCavern/Raid_SerpentshrineCavern.cpp \
TheEye/Raid_TheEye.cpp \
TheObsidianSanctum/Raid_TheObsidianSanctum.cpp \
Ulduar/Raid_Ulduar.cpp \
ZulGurub/Raid_ZulGurub.cpp \
MagtheridonsLair/Raid_MagtheridonsLair.cpp \
SunwellPlateau/Raid_SunwellPlateau.cpp \
WorldBosses/Raid_WorldBosses.cpp \
ZulAman/Raid_ZulAman.cpp \
ScriptStdAfx.h \
../Common/Instance_Base.cpp \
../Common/Base.cpp \
Setup.cpp
