INCLUDES = -I$(top_srcdir)/src/hearthstone-logonserver \
   -I$(top_srcdir)/src/hearthstone-realmserver -I$(top_srcdir)/src/hearthstone-shared -I$(top_srcdir)/src/hearthstone-voicechat \
   -I$(top_srcdir)/src/hearthstone-world -I$(srcdir) -I$(srcdir)/../../../../dep/include \
   -I$(srcdir)/../../../../dep/src -I$(srcdir)/../../../../src
INCLUDES += -I$(srcdir)/../../../hearthstone-shared/g3dlite -I$(srcdir)/../../../hearthstone-shared/vmap \
            -I../Common/

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libSunInstanceScripts.la

libSunInstanceScripts_la_SOURCES = \
Arcatraz/Instance_Arcatraz.cpp \
AuchenaiCrypts/Instance_AuchenaiCrypts.cpp \
Azjol-Nerub/Instance_AzjolNerub.cpp \
BlackfathomDeeps/Instance_BlackfathomDeeps.cpp \
BlackMorass/Instance_BlackMorass.cpp \
BlackrockDepths/Instance_BlackrockDepths.cpp \
BlackrockSpire/Instance_BlackrockSpire.cpp \
BlackTemple/Raid_BlackTemple.cpp \
BlackTemple/ShadeOfAkama.cpp \
BlackwingLair/Raid_BlackwingLair.cpp \
BloodFurnace/Instance_BloodFurnace.cpp \
Botanica/Instance_Botanica.cpp \
CullingOfStratholme/Instance_CullingOfStratholme.cpp \
Deadmine/Instance_Deadmines.cpp \
DireMaul/Instance_DireMaul.cpp \
DrakTharonKeep/Instance_DrakTharonKeep.cpp \
GruulsLair/Raid_GruulsLair.cpp \
HallsOfLightning/Instance_HallsOfLightning.cpp \
HallsOfStone/Instance_HallsOfStone.cpp \
HellfireRamparts/Instance_HellfireRamparts.cpp \
HyjalSummit/Raid_HyjalSummit.cpp \
IcecrownCitadel/ICC_tele.cpp \
Karazhan/Raid_Karazhan.cpp \
MagistersTerrace/Magisters_Terrace_InstanceScript.h \
MagistersTerrace/Magisters_Terrace_InstanceScript.cpp \
MagistersTerrace/Felblood_Kaelthas.cpp \
MagistersTerrace/Priestess_Delrissa.cpp \
MagistersTerrace/Selin_Fireheart.cpp \
MagistersTerrace/Vexallus.cpp \
MagtheridonsLair/Raid_MagtheridonsLair.cpp \
ManaTombs/Instance_ManaTombs.cpp \
Mauradon/Instance_Mauradon.cpp \
MoltenCore/Raid_MoltenCore.cpp \
Naxxramas/Raid_Naxxramas.cpp \
Nexus/Instance_Nexus.cpp \
OldHillsbradFoothills/Instance_OldHillsbradFoothills.cpp \
OnyxiasLair/Raid_OnyxiasLair.cpp \
RagefireChasm/Instance_RagefireChasm.cpp \
RazorfenDowns/Instance_RazorfenDowns.cpp \
ScarletMonastery/Instance_ScarletMonastery.cpp \
Scholomance/Instance_Scholomance.cpp \
SerpentshrineCavern/Raid_SerpentshrineCavern.cpp \
SethekkHalls/Instance_SethekkHalls.cpp \
ShadowfangKeep/Instance_ShadowfangKeep.cpp \
ShadowLabyrinth/Instance_ShadowLabyrinth.cpp \
SunwellPlateau/Raid_SunwellPlateau.cpp \
TheEye/Raid_TheEye.cpp \
TheEyeofEternity/Raid_TheEyeofEternity.cpp \
TheMechanar/Instance_TheMechanar.cpp \
TheObsidianSanctum/Raid_TheObsidianSanctum.cpp \
TheOldKingdom/Instance_TheOldKingdom.cpp \
TheRubySanctum/Raid_TheRubySanctum.cpp \
TheShatteredHalls/Instance_TheShatteredHalls.cpp \
TheSlavePens/Instance_TheSlavePens.cpp \
TheSteamvault/Instance_TheSteamvault.cpp \
TheStockade/Instance_TheStockade.cpp \
TheUnderbog/Instance_TheUnderbog.cpp \
Uldaman/Instance_Uldaman.cpp \
Ulduar/Raid_Ulduar.cpp \
UtgardeKeep/Instance_UtgardeKeep.cpp \
WailingCaverns/Instance_WailingCaverns.cpp \
WorldBosses/Raid_WorldBosses.cpp \
ZulAman/Raid_ZulAman.cpp \
ZulFarrak/Instance_ZulFarrak.cpp \
ZulGurub/Raid_ZulGurub.cpp \
ScriptStdAfx.h \
../Common/Instance_Base.cpp \
../Common/Base.cpp \
Setup.cpp
