INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../FeatherMoonEmu-shared
INCLUDES += -I$(srcdir)/../../../FeatherMoonEmu-world -I$(srcdir)/../../../../dep/src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libGossipScripts.la

libGossipScripts_la_SOURCES = Gossip_Innkeepers.cpp GuardGossip.cpp Teleporter.cpp PvPMgr.cpp PvPSystem.cpp Setup.cpp
